--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "^9.3.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-firebaseui": "^4.1.0",
     "react-sortable-hoc": "^1.11.0",
     "rxjs": "^6.5.5",
     "typescript": "^3.8.3"
