--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "AGPL 3.0",
   "main": "src/index.ts",
   "dependencies": {
+    "@material-ui/core": "^4.9.12",
     "@whenjs/when": "^0.4.2",
     "array-move": "^2.2.1",
     "color": "^3.1.2",
