--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "color": "^3.1.2",
     "firebase": "^7.14.2",
     "next": "^9.3.6",
+    "next-pwa": "^2.4.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-firebaseui": "^4.1.0",
