--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/core": "^4.9.12",
     "@whenjs/when": "^0.4.2",
     "array-move": "^2.2.1",
+    "axios": "^0.19.2",
     "color": "^3.1.2",
     "firebase": "^7.14.2",
     "next": "^9.3.6",
@@ -20,6 +21,7 @@
     "typescript": "^3.8.3"
   },
   "devDependencies": {
+    "@now/node": "^1.6.0",
     "@types/array-move": "^2.0.0",
     "@types/color": "^3.0.1",
     "@types/next": "^9.0.0",
